renamed CompaniesViewController as it will get a new role to show companies in close proximity

--- a/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
+++ b/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
@@ -138,7 +138,7 @@
         <!--CompaniesCloseCollectionViewController-->
         <scene sceneID="f38-qE-wNH">
             <objects>
-                <collectionViewController id="UVK-yH-wqA" userLabel="CompaniesCloseCollectionViewController" customClass="CompaniesViewController" customModule="CocoaHeadsNL" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="companiesCloseCollectionViewController" id="UVK-yH-wqA" userLabel="CompaniesCloseCollectionViewController" customClass="CompaniesCloseCollectionViewController" customModule="CocoaHeadsNL" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" dataMode="prototypes" id="Ze8-RZ-GD0">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="70"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
