renamed CompanyCloseCollectionViewController to CompaniesNearbyCollectionViewController

--- a/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
+++ b/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
@@ -138,10 +138,10 @@
             </objects>
             <point key="canvasLocation" x="2578" y="-945"/>
         </scene>
-        <!--CompaniesCloseCollectionViewController-->
+        <!--CompaniesNearbyCollectionViewController-->
         <scene sceneID="f38-qE-wNH">
             <objects>
-                <collectionViewController storyboardIdentifier="companiesCloseCollectionViewController" id="UVK-yH-wqA" userLabel="CompaniesCloseCollectionViewController" customClass="CompaniesCloseCollectionViewController" customModule="CocoaHeadsNL" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="companiesNearbyCollectionViewController" id="UVK-yH-wqA" userLabel="CompaniesNearbyCollectionViewController" customClass="CompaniesNearbyCollectionViewController" customModule="CocoaHeadsNL" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" dataMode="prototypes" id="Ze8-RZ-GD0">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -501,6 +501,6 @@
         <image name="tempBanner" width="717" height="177"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="bzB-8c-lmp"/>
+        <segue reference="vXN-bc-jAa"/>
     </inferredMetricsTieBreakers>
 </document>
