--- a/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
+++ b/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                                     <constraint firstAttribute="height" constant="89" id="Cqs-Qh-tOA"/>
                                 </constraints>
                                 <connections>
-                                    <segue destination="EK5-Tm-CvN" kind="embed" id="0L6-Qe-WOT"/>
+                                    <segue destination="iFk-kc-Xzc" kind="embed" id="gdd-vF-H2h"/>
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="apQ-cA-VHt">
@@ -72,34 +72,47 @@
             </objects>
             <point key="canvasLocation" x="1734" y="-994"/>
         </scene>
-        <!--CompanyHighLightViewController-->
-        <scene sceneID="3Ez-cs-pVJ">
+        <!--Company High Light View Controller-->
+        <scene sceneID="JTl-k1-VwK">
             <objects>
-                <viewController id="EK5-Tm-CvN" userLabel="CompanyHighLightViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="fnc-Y6-J4c"/>
-                        <viewControllerLayoutGuide type="bottom" id="rIf-yJ-YkU"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="bU2-d9-h3w">
+                <collectionViewController storyboardIdentifier="companyHighLightCollectionViewController" id="iFk-kc-Xzc" customClass="CompanyHighLightViewController" customModule="CocoaHeadsNL" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" dataMode="prototypes" id="zmW-GA-BSW">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="89"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tempBanner" translatesAutoresizingMaskIntoConstraints="NO" id="eN2-ms-h5Q">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="89"/>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="bottom" secondItem="eN2-ms-h5Q" secondAttribute="bottom" id="A3j-yH-ef4"/>
-                            <constraint firstItem="eN2-ms-h5Q" firstAttribute="leading" secondItem="bU2-d9-h3w" secondAttribute="leading" id="YHr-fo-z1M"/>
-                            <constraint firstItem="eN2-ms-h5Q" firstAttribute="top" secondItem="bU2-d9-h3w" secondAttribute="top" id="bkf-do-5oe"/>
-                            <constraint firstAttribute="trailing" secondItem="eN2-ms-h5Q" secondAttribute="trailing" id="jTi-0Y-IZU"/>
-                        </constraints>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="LRS-KN-ZXi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="fKr-ed-ARr">
+                            <size key="itemSize" width="300" height="89"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="companyHighLightCollectionViewCell" id="oto-vz-EFR">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="89"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <connections>
+                                    <segue destination="3uJ-fO-52Q" kind="showDetail" identifier="ShowDetail" id="cLv-9F-UYt"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="iFk-kc-Xzc" id="7JN-Qk-JGq"/>
+                            <outlet property="delegate" destination="iFk-kc-Xzc" id="8GW-hE-XfM"/>
+                        </connections>
+                    </collectionView>
+                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <value key="contentSizeForViewInPopover" type="size" width="600" height="89"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="paginationEnabled" value="NO"/>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="pullToRefreshEnabled" value="NO"/>
+                    </userDefinedRuntimeAttributes>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FZK-Z5-aV5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2579" y="-1254"/>
+            <point key="canvasLocation" x="2578" y="-1236.5"/>
         </scene>
         <!--CompanyTableViewController-->
         <scene sceneID="G6l-Lo-9Y9">
@@ -113,7 +126,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                             <connections>
-                                <segue destination="UVK-yH-wqA" kind="embed" id="ydj-tq-ZCj"/>
+                                <segue destination="UVK-yH-wqA" kind="embed" id="Js5-lt-gpl"/>
                             </connections>
                         </containerView>
                         <prototypes>
@@ -160,6 +173,7 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" title="CocoaHeadsNL" id="QQc-eg-AGV"/>
+                    <value key="contentSizeForViewInPopover" type="size" width="600" height="80"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="boolean" keyPath="loadingViewEnabled" value="NO"/>
                     </userDefinedRuntimeAttributes>
@@ -498,9 +512,8 @@
         <image name="CompaniesTabIcon" width="30" height="30"/>
         <image name="EventsTabIcon" width="30" height="30"/>
         <image name="JobsTabIcon" width="30" height="30"/>
-        <image name="tempBanner" width="717" height="177"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="vXN-bc-jAa"/>
+        <segue reference="bzB-8c-lmp"/>
     </inferredMetricsTieBreakers>
 </document>
